Fix vertical scrollbar display on sidebar menu.

--- a/css/main.scss
+++ b/css/main.scss
@@ -1232,7 +1232,7 @@ Page Structure */
       position: fixed;
       width: 10.8em;
       height: 100%;
-      overflow-y: scroll;
+      overflow-y: auto;
       padding: $lh-base;
   }
   .wrapper {
